--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -18,8 +18,8 @@
             <div class="overlay-content">
                 <!-- Links-->
                 <a href="../Home_Page.html">Home</a>
-                <a href="Contanct_Info.html">Contact</a>
-                <a href="About_Me.html">About</a>
+                <a href="Contanct_Info.html">Contact Us</a>
+                <a href="About_Me.html">About Me</a>
                 <a href="Resources.html">Resources</a>
                 <a href="Client_Experiences.html">Client Experiences</a>
                 <a href="Login.html">Patient Portal</a>
