--- a/Home_Page.html
+++ b/Home_Page.html
@@ -18,8 +18,8 @@
         <div class="overlay-content">
           <!-- Links-->
           <a href="Home_Page.html">Home</a>
-          <a href="HTML/Contanct_Info.html">Contact</a>
-          <a href="HTML/About_Me.html">About</a>
+          <a href="HTML/Contanct_Info.html">Contact Us</a>
+          <a href="HTML/About_Me.html">About Me</a>
           <a href="HTML/Resources.html">Resources</a>
           <a href="HTML/Client_Experiences.html">Client Experiences</a>
           <a href="HTML/Login.html">Patient Portal</a>
