start of the resources page, ref links fix 7/5/23

--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -28,7 +28,7 @@
     
             <span onclick="openLinks()">&#9776;</span>
             <!-- home link -->
-            <img src="../images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"><a href="../Home_Page.html"></a></img>
+            <a href="../Home_Page.html"><img src="../images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"></a>
     
         </nav>
 
