fix odd spaceing in login 7/7/23

--- a/HTML/About_Me.html
+++ b/HTML/About_Me.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="container-blocks">
-      <div id="block1">
+      <div id="block2">
         <div class="block2-content">
         <h2>About My Patients</h2>
         <br>
@@ -84,6 +84,20 @@
           <li>Bereavement and loss </li>
           <li>Divorce </li>
         </ul>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="container-blocks">
+      <div id="block2">
+        <div class="block2-content">
+        <h2>Insurance and Payment</h2>
+        <br>
+        <p>Payment for therapy services is due at the time of service.
+          Although I do not accpet insurance, I accept cash, check, credit card, Venmo and Zelle.
+          All patients are given a monthly statements that can be submitted to an isurance company for reimbursement.
+        </p>
 
         </div>
       </div>
