--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -48,7 +48,7 @@
             <br>
             <p><a href="tel:914-282-8705" style="text-decoration: underline; color: #335e7e; font-size:larger;">(914)282-8705</a></p>
             <br>
-            <p><a href="mailto:audreygelfand@gmail.com" style="text-decoration: underline; color: #335e7e; font-size:larger;">audreygelfand@gmail.com</a></p>
+            <p><a href="mailto:office@audreygelfand.com" style="text-decoration: underline; color: #335e7e; font-size:larger;">office@audreygelfand.com</a></p>
         </div>
         
 
