--- a/HTML/Resources.html
+++ b/HTML/Resources.html
@@ -38,7 +38,7 @@
 
     <div id="block1">
       <div class="block1-content">
-          <p>There is a vast array of literature available for those seeking to improve their mental health or understand an illness.
+          <p style="color: white">There is a vast array of literature available for those seeking to improve their mental health or understand an illness.
              These are only a few of those resources, but they are ones my clients find very helpful.
              I do not have any relationship with these organizations or authors, they are simply resources that have proven to be valuable.
              If you have a resource that you think I should add to this list, please let me know.
@@ -50,10 +50,10 @@
 
           <br>
 
-          <ol>
+          <ol class="ol">
               <li class="li">
-                  NAMI – The National Association for the Mentally Ill. 
-                  Helpful information about mental illness and how we can support those dealing with significant mental health challenges.
+                  <p>NAMI – The National Association for the Mentally Ill. 
+                  Helpful information about mental illness and how we can support those dealing with significant mental health challenges.</p>
                   <br>
                   <br>
                   <a href="https://www.nami.org/Home ">Nami</a>
@@ -63,8 +63,8 @@
 
               <!-- margin space in between each li in the ol-->
               <li class="li">
-                  PFLAG is an organization that provides information and support to queer people and their families. 
-                  They have a lot of information, and it is especially helpful to parents who have a queer child.
+                  <p>PFLAG is an organization that provides information and support to queer people and their families. 
+                  They have a lot of information, and it is especially helpful to parents who have a queer child.</p>
                   <br>
                   <br>
                   <a href="https://pflag.org/">PFLAG</a>
@@ -74,8 +74,8 @@
 
               <!-- margin space in between each li in the ol-->
               <li class="li">
-                  PFLAG is an organization that provides information and support to queer people and their families. 
-                  They have a lot of information, and it is especially helpful to parents who have a queer child.
+                  <p>PFLAG is an organization that provides information and support to queer people and their families. 
+                  They have a lot of information, and it is especially helpful to parents who have a queer child.</p>
                   <br>
                   <br>
                   <a href="https://pflag.org/">PFLAG</a>
@@ -85,7 +85,7 @@
 
               <!-- margin space in between each li in the ol-->
               <li class="li">
-                  Suicide prevention information. If you are a patient and have feelings of suicide, please call the office, ASAP. 
+                  <p>Suicide prevention information. If you are a patient and have feelings of suicide, please call the office, ASAP.</p>
                   <br>
                   <br>
                   <a href="https://www.cdc.gov/suicide/index.html ">Suicide Prevention</a>
@@ -95,7 +95,7 @@
 
               <!-- margin space in between each li in the ol-->
               <li class="li">
-                  The Surgeon General, Dr. Vivek Murthy is dedicated to understanding how loneliness impacts emotional and physical health. His report is here: 
+                  <p>The Surgeon General, Dr. Vivek Murthy is dedicated to understanding how loneliness impacts emotional and physical health. His report is here: </p>
                   <br>
                   <br>
                   <a href="https://www.hhs.gov/sites/default/files/surgeon-general-social-connection-advisory.pdf ">Dr. Vivek Murthy</a>
@@ -111,9 +111,9 @@
 
           <br>
 
-          <ol>
+          <ol class = "ol">
               <li class="li">
-                  The Body Keeps the Score – Understanding how Trauma affects us and how it is expressed though our bodies. 
+                  <p>The Body Keeps the Score – Understanding how Trauma affects us and how it is expressed though our bodies. </p>
                   Fascinating and very instructive. 
                   <br>
                   <br>
@@ -123,7 +123,7 @@
               <br>
 
               <li class="li">
-                  The Narcissistic parent and parental alienation for those dealing with the trauma of having a narcissistic parent. This book helps people regain a positive sense of themselves and helps to leave the abusive parent behind. 
+                  <p>The Narcissistic parent and parental alienation for those dealing with the trauma of having a narcissistic parent. This book helps people regain a positive sense of themselves and helps to leave the abusive parent behind. </p>
                   <br>
                   <br>
                   <a href="https://www.amazon.com/gp/product/B01K2O0GIY/ref=ppx_yo_dt_b_d_asin_title_o07aud_?ie=UTF8&psc=1">The Narcissistic Parent and Parental Alienation</a>
@@ -132,7 +132,7 @@
               <br>
 
               <li class="li">
-                  Wired for Love A great resource for couples seeking to improve their relationship and communication.
+                  <p>Wired for Love A great resource for couples seeking to improve their relationship and communication.</p>
                   <br>
                   <br>
                   <a href="https://www.amazon.com/gp/product/B016WTDHTI/ref=ppx_yo_dt_b_d_asin_title_o03aud_?ie=UTF8&psc=1 ">Wired for Love</a>
@@ -147,36 +147,39 @@
 
           <br>
             
-          <ol>
+          <ol class="ol">
               <li class="li">
-                  Calm – good for mindfulness 
+                  <p>Calm – good for mindfulness</p>
                   <br>
                   <br>
                   <!-- Get a link for android and iphone-->
-                  <a href="">Calm</a>
-                  <a href="">Calm</a>
+                  <p>Android: <a href="">Calm</a></p>
+                  <br>
+                  <p>Apple: <a href="">Calm</a></p>
               </li>
 
               <br>
 
               <li class="li">
-                  Insight Timer – good for meditation and relaxation 
+                  <p>Insight Timer – good for meditation and relaxation </p>
                   <br>
                   <br>
                   <!-- Get a link for android and iphone-->
-                  <a href="">Insight Timer</a>
-                  <a href="">Insight Timer</a>
+                  <p>Android: <a href="">Insight Timer</a></p>
+                  <br>
+                  <p>Apple: <a href="">Insight Timer</a></p>
               </li>
                 
               <br>
 
               <li class="li">
-                  White Noise Machine – good for improving sleep  
+                  <p>White Noise Machine – good for improving sleep  </p>
                   <br>
                   <br>
                   <!-- Get a link for android and iphone-->
-                  <a href="">White Noise Machine</a>
-                  <a href="">White Noise Machine</a>
+                  <p>Android: <a href="">White Noise Machine</a></p>
+                  <br>
+                  <P>Apple: <a href="">White Noise Machine</a></p>
               </li>
 
               <br>
