color change for text. hover added

--- a/HTML/About_Me.html
+++ b/HTML/About_Me.html
@@ -95,7 +95,7 @@
         <h2>Insurance and Payment</h2>
         <br>
         <p>Payment for therapy services is due at the time of service.
-          Although I do not accpet insurance, I accept cash, check, credit card, Venmo and Zelle.
+          Although I do not accept insurance, I accept cash, check, credit card, Venmo and Zelle.
           All patients are given a monthly statements that can be submitted to an isurance company for reimbursement.
         </p>
 
