--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -55,7 +55,7 @@
 
         <div class="contact-form-container">
             <form class="contact-form">
-                <label for="name">Name:</label>
+                <label for="name">First Name:</label>
                 <input type="text" id="name" name="name" required>
 
                 <label for="last-name">Last Name:</label>
