got rid of portal page. no use.

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -22,7 +22,7 @@
           <a href="HTML/About_Me.html">About Me</a>
           <a href="HTML/Resources.html">Resources</a>
           <a href="HTML/Client_Experiences.html">Client Experiences</a>
-          <a href="HTML/Login.html">Patient Portal</a>
+          <a href="https://www.therapyportal.com/p/audreygelfand/">Patient Portal</a>
         </div>
       </div>
 
