--- a/HTML/About_Me.html
+++ b/HTML/About_Me.html
@@ -22,7 +22,7 @@
           <a href="About_Me.html">About me</a>
           <a href="Resources.html">Resources</a>
           <a href="Client_Experiences.html">Client Experiences</a>
-          <a href="Login.html">Patient Portal</a>
+          <a href="https://www.therapyportal.com/p/audreygelfand/">Patient Portal</a>
         </div>
       </div>
 
