--- a/Home_Page.html
+++ b/Home_Page.html
@@ -120,7 +120,7 @@
 
       <div id="block3">
         <div class="block3-content">
-          <h2> Trusted reliable resources </h2>
+          <h2> Trusted Reliable Resources </h2>
           <br>
           <p> As a licensed physician, I'm here to provide you with trusted guidance for your health concerns. Explore the following resources to help you keep your symptoms under control and improve your well-being. Click the link below for more information.</p>
             <br>
