--- a/HTML/Client_Experiences.html
+++ b/HTML/Client_Experiences.html
@@ -20,7 +20,7 @@
                 <a href="About_Me.html">About Me</a>
                 <a href="Resources.html">Resources</a>
                 <a href="Client_Experiences.html">Client Experiences</a>
-                <a href="Login.html">Patient Portal</a>
+                <a href="https://www.therapyportal.com/p/audreygelfand/">Patient Portal</a>
             </div>
             </div>
     
@@ -32,7 +32,7 @@
 
         <div class="bodyContainer">
             <div class="contentcontainer">
-                <div class="contactcontainer">
+                <div class="overheadcontainer">
                     <h1 class="the_title">Client Experiences</h1>
                     <p class="the_title_text">
                         Browse what our clients say about us
