--- a/HTML/About_Me.html
+++ b/HTML/About_Me.html
@@ -22,7 +22,7 @@
           <a href="About_Me.html">About me</a>
           <a href="Resources.html">Resources</a>
           <a href="Client_Experiences.html">Client Experiences</a>
-          <a href="Login.html">Patient Portal</a>
+          <a href="https://www.therapyportal.com/p/audreygelfand/">Patient Portal</a>
         </div>
       </div>
 
@@ -58,7 +58,7 @@
     </div>
 
     <div class="container-blocks">
-      <div id="block1">
+      <div id="block2">
         <div class="block2-content">
         <h2>About My Patients</h2>
         <br>
@@ -84,6 +84,20 @@
           <li>Bereavement and loss </li>
           <li>Divorce </li>
         </ul>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="container-blocks">
+      <div id="block2">
+        <div class="block2-content">
+        <h2>Insurance and Payment</h2>
+        <br>
+        <p>Payment for therapy services is due at the time of service.
+          Although I do not accept insurance, I accept cash, check, credit card, Venmo and Zelle.
+          All patients are given a monthly statements that can be submitted to an isurance company for reimbursement.
+        </p>
 
         </div>
       </div>
