--- a/HTML/Resources.html
+++ b/HTML/Resources.html
@@ -12,6 +12,8 @@
          right now works when you click away from it but not when you click the button again.
          find all apple and iphone links.-->
 
+    <!-- Onclick of closeing the button you want the text to switch to the right arrow and on click again you want to be the down-->
+
     <!-- header for padding block-->
     <nav id="headerBlock">
       <!-- Overley for menu for quick links-->
