--- a/HTML/404.html
+++ b/HTML/404.html
@@ -39,7 +39,7 @@
     <center><p class="p404"> Or click the button below to go to the home page.</p></center>
     <br>
     <br>
-    <center><button type="button" class="button" onclick="redirectToHome()"> Helpful Resources </button></center>
+    <center><button type="button" class="button" onclick="redirectToHome()"> Home Page </button></center>
 
     <div class="content">
       <br>
