buttons for res and white text 7/25/23

--- a/HTML/About_Me.html
+++ b/HTML/About_Me.html
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <span onclick="openLinks()">&#9776;</span>
+      <span onclick="openLinks()" style="color: black">&#9776;</span>
       <!-- home link -->
       <a href="../Home_Page.html"><img src="../images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"></a>
 
