--- a/HTML/Resources.html
+++ b/HTML/Resources.html
@@ -34,7 +34,6 @@
 
     </nav>
 
-    <!-- See how it looks after the size edits if you do not like than, add some pictures that might help. Also possibly change the links to be buttons that are pressed. For the mobile app ones label one as google and androids-->
 
     <center><h1>Resources</h1></center>
 
@@ -61,40 +60,37 @@
                   Helpful information about mental illness and how we can support those dealing with significant mental health challenges.</p>
                   <br>
                   <br>
-                  <a href="https://www.nami.org/Home ">Nami</a>
+                  <button type="button" class="button1" onclick="redirectToNami()">Nami</button>
               </li>
 
               <br>
 
-              <!-- margin space in between each li in the ol-->
               <li class="li">
                   <p>PFLAG is an organization that provides information and support to queer people and their families. 
                   They have a lot of information, and it is especially helpful to parents who have a queer child.</p>
                   <br>
                   <br>
-                  <a href="https://pflag.org/">PFLAG</a>
+                  <button type="button" class="button1" onclick="redirectToPFLAG()">PFLAG</button>
               </li>
 
               <br>
 
               <br>
 
-              <!-- margin space in between each li in the ol-->
               <li class="li">
                   <p>Suicide prevention information. If you are a patient and have feelings of suicide, please call the office, ASAP.</p>
                   <br>
                   <br>
-                  <a href="https://www.cdc.gov/suicide/index.html ">Suicide Prevention</a>
+                  <button type="button" class="button1" onclick="redirectToSP()">Suicide Prevention</button>
               </li>
 
               <br>
 
-              <!-- margin space in between each li in the ol-->
               <li class="li">
                   <p>The Surgeon General, Dr. Vivek Murthy is dedicated to understanding how loneliness impacts emotional and physical health. His report is here: </p>
                   <br>
                   <br>
-                  <a href="https://www.hhs.gov/sites/default/files/surgeon-general-social-connection-advisory.pdf ">Dr. Vivek Murthy</a>
+                  <button type="button" class="button1" onclick="redirectToDRVM()">Dr. Vivek Murthy</button>
               </li>
 
               <br>
@@ -115,7 +111,7 @@
                   <p>The Body Keeps the Score – Understanding how Trauma affects us and how it is expressed though our bodies. Fascinating and very instructive.</p> 
                   <br>
                   <br>
-                  <a href="https://www.amazon.com/Body-Keeps-Score-Healing-Trauma/dp/B08TX585RN/ref=sr_1_1?crid=RRN84HZ9QUED&keywords=the+body+keeps+the+score&qid=1688406796&sprefix=body+k%2Caps%2C86&sr=8-1 ">The Body Keeps the Score</a>
+                  <button type="button" class="button1" onclick="redirectToKeepScore()">The Body Keeps the Score</button>
               </li>
 
               <br>
@@ -124,7 +120,7 @@
                   <p>The Narcissistic parent and parental alienation for those dealing with the trauma of having a narcissistic parent. This book helps people regain a positive sense of themselves and helps to leave the abusive parent behind. </p>
                   <br>
                   <br>
-                  <a href="https://www.amazon.com/gp/product/B01K2O0GIY/ref=ppx_yo_dt_b_d_asin_title_o07aud_?ie=UTF8&psc=1">The Narcissistic Parent and Parental Alienation</a>
+                  <button type="button" class="button1" onclick="redirectToNarcissistic()">The Narcissistic Parent and Parental Alienation</button>
               </li>
 
               <br>
@@ -133,7 +129,7 @@
                   <p>Wired for Love A great resource for couples seeking to improve their relationship and communication.</p>
                   <br>
                   <br>
-                  <a href="https://www.amazon.com/gp/product/B016WTDHTI/ref=ppx_yo_dt_b_d_asin_title_o03aud_?ie=UTF8&psc=1 ">Wired for Love</a>
+                  <button type="button" class="button1" onclick="redirectToLove()">Wired for Love</button>
               </li>
 
               <br>
@@ -153,10 +149,9 @@
                   <p>Calm – good for mindfulness</p>
                   <br>
                   <br>
-                  <!-- Get a link for android and iphone-->
-                  <p>Android:<a href="https://play.google.com/store/apps/details?id=com.calm.android&hl=en_US&gl=US&pli=1">Calm</a></p>
+                  <p>Android: <button type="button" class="button1" onclick="redirectToCalmA()">Calm</button></p>
                   <br>
-                  <p>Apple:<a href="https://apps.apple.com/us/app/calm/id571800810">Calm</a></p>
+                  <p>Apple: <button type="button" class="button1" onclick="redirectToCalmB()">Calm</button></p>
               </li>
 
               <br>
@@ -165,10 +160,9 @@
                   <p>Insight Timer – good for meditation and relaxation </p>
                   <br>
                   <br>
-                  <!-- Get a link for android and iphone-->
-                  <p>Android:<a href="https://play.google.com/store/apps/details?id=com.spotlightsix.zentimerlite2&hl=en_US&gl=US">Insight Timer</a></p>
+                  <p>Android: <button type="button" class="button1" onclick="redirectToTimerA()">Insight Timer</button></p>
                   <br>
-                  <p>Apple:<a href="https://apps.apple.com/vc/app/insight-timer-meditation-app/id337472899">Insight Timer</a></p>
+                  <p>Apple: <button type="button" class="button1" onclick="redirectToTimerB()">Insight Timer</button></p>
               </li>
                 
               <br>
@@ -178,9 +172,9 @@
                   <br>
                   <br>
                   <!-- Get a link for android and iphone-->
-                  <p>Android:<a href="https://play.google.com/store/apps/details?id=com.tmsoft.whitenoise.lite&hl=en_US&gl=US">White Noise Machine</a></p>
+                  <p>Android: <button type="button" class="button1" onclick="redirectToWhiteA()">White Noise Machine</button></p>
                   <br>
-                  <P>Apple:<a href="https://apps.apple.com/us/app/sound-machine-white-noise/id1534157897">White Noise Machine</a></p>
+                  <P>Apple: <button type="button" class="button1" onclick="redirectToWhiteB()">White Noise Machine</button></p>
               </li>
 
               <br>
@@ -323,6 +317,58 @@
             }
           }
         }
+      }
+
+      function redirectToNami(){
+        window.location.href = "https://www.nami.org/Home ";
+      }
+
+      function redirectToPFLAG(){
+        window.location.href = "https://pflag.org/";
+      }
+
+      function redirectToSP(){
+        window.location.href = "https://www.cdc.gov/suicide/index.html ";
+      }
+
+      function redirectToDRVM(){
+        window.location.href = "https://www.hhs.gov/sites/default/files/surgeon-general-social-connection-advisory.pdf l";
+      }
+
+      function redirectToKeepScore(){
+        window.location.href = "https://www.amazon.com/Body-Keeps-Score-Healing-Trauma/dp/B08TX585RN/ref=sr_1_1?crid=RRN84HZ9QUED&keywords=the+body+keeps+the+score&qid=1688406796&sprefix=body+k%2Caps%2C86&sr=8-1 ";
+      }
+
+      function redirectToNarcissistic(){
+        window.location.href = "https://www.amazon.com/gp/product/B01K2O0GIY/ref=ppx_yo_dt_b_d_asin_title_o07aud_?ie=UTF8&psc=1";
+      }
+
+      function redirectToLove(){
+        window.location.href = "https://www.amazon.com/gp/product/B016WTDHTI/ref=ppx_yo_dt_b_d_asin_title_o03aud_?ie=UTF8&psc=1 ";
+      }
+
+      function redirectToCalmA(){
+        window.location.href = "https://play.google.com/store/apps/details?id=com.calm.android&hl=en_US&gl=US&pli=1";
+      }
+
+      function redirectToCalmB(){
+        window.location.href = "https://apps.apple.com/us/app/calm/id571800810";
+      }
+
+      function redirectToTimerA(){
+        window.location.href = "https://play.google.com/store/apps/details?id=com.spotlightsix.zentimerlite2&hl=en_US&gl=US";
+      }
+
+      function redirectToTimerB(){
+        window.location.href = "https://apps.apple.com/vc/app/insight-timer-meditation-app/id337472899";
+      }
+
+      function redirectToWhiteA(){
+        window.location.href = "https://play.google.com/store/apps/details?id=com.tmsoft.whitenoise.lite&hl=en_US&gl=US";
+      }
+
+      function redirectToWhiteB(){
+        window.location.href = "https://apps.apple.com/us/app/sound-machine-white-noise/id1534157897";
       }
       
 
