resources media done about me started 7/27/23

--- a/HTML/About_Me.html
+++ b/HTML/About_Me.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="../css/about_me.css">
-    <link rel="stylesheet" href="../css/media.css">
+    <link rel="stylesheet" href="../css/mediaAM.css">
     <title>Audrey Gelfand</title>
   </head>
   <body>
