--- a/HTML/Resources.html
+++ b/HTML/Resources.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="../css/resources.css">
-    <link rel="stylesheet" href="../css/media.css">
+    <link rel="stylesheet" href="../css/mediaRe.css">
     <title>Audrey Gelfand</title>
   </head>
   <body>
@@ -172,9 +172,9 @@
                   <br>
                   <br>
                   <!-- Get a link for android and iphone-->
-                  <p>Android: <button type="button" class="button1" onclick="redirectToWhiteA()">White Noise Machine</button></p>
+                  <p>Android: <button type="button" class="button1" onclick="redirectToWhiteA()">White Noise</button></p>
                   <br>
-                  <P>Apple: <button type="button" class="button1" onclick="redirectToWhiteB()">White Noise Machine</button></p>
+                  <P>Apple: <button type="button" class="button1" onclick="redirectToWhiteB()">White Noise</button></p>
               </li>
 
               <br>
