removed old unused images. moved new images into folder. switched out footer images.

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -34,13 +34,13 @@
 
     <div class="slideshow-container">
       <div class="Slides fade">
-        <img src="images/AGBig.JPG" style="width: 100%; height: 400px">
+        <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 400px">
       </div>
       <div class="Slides fade">
-        <img src="images/AGBig.JPG" style="width: 100%; height: 400px">
+        <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 400px">
       </div>
       <div class="Slides fade">
-        <img src="images/AGBig.JPG" style="width: 100%; height: 400px">
+        <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 400px">
       </div>
     </div>
     <br>  
@@ -66,14 +66,14 @@
             <button type="button" class="button1" onclick="redirectToAboutMe()">About Dr. Gelfand</button>
           </p>
         </div>
-        <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
+        <img src="images/location.jpg" alt="Audrey Gelfand" class="imageright">
       </div>
 
       <div class="block2">
         <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu" class="box1-link">
           <div class="box1">
             <div class="box1-image">
-              <img src="images/location.png" alt="box1" style="height: 200px;">
+              <img src="images/location.png" alt="box1">
             </div>
             <div class="box1-content">
               <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu" class="box1-title" style="text-decoration: none;"> My Office </a>
@@ -88,7 +88,7 @@
         <a href="HTML/Client_Experiences.html">
           <div class="box1">
             <div class="box1-image">
-              <img src="images/faketherapy.jpg" alt="box1">
+              <img src="images/location.png" alt="box1">
             </div>
             <div class="box1-content">
               <a href="HTML/Client_Experiences.html" class="box1-title" style="text-decoration: none;"> Client Testimonials </a>
@@ -104,7 +104,7 @@
         <a href="https://www.therapyportal.com/p/audreygelfand/">
           <div class="box1">
             <div class="box1-image">
-              <img src="images/faketherapy.jpg" alt="box1">
+              <img src="images/location.png" alt="box1">
             </div>
             <div class="box1-content">
               <a href="https://www.therapyportal.com/p/audreygelfand/" class="box1-title" style="text-decoration: none;">Patient Portal</a>
@@ -128,7 +128,7 @@
             <button type="button" class="button2" onclick="redirectToResources()"> Helpful Resources </button>
           </p>
         </div>
-        <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageleft">
+        <img src="images/location.png" alt="Audrey Gelfand" class="imageleft">
       </div>
     </div>
 
@@ -140,7 +140,7 @@
     <div class="footer-container">
       <div class="footer">
         <div class="imagefooter">
-          <img src="images/AGTransparent.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
+          <img src="images/Audrey Pictures/AG PHD.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
         </div>
         <div class="footer-info footer-1">
           <a href="Home_Page.html">Home</a>
