small changes for the site

--- a/HTML/About_Me.html
+++ b/HTML/About_Me.html
@@ -54,7 +54,7 @@
           Therapy is very challenging and can feel daunting to new patients, however, in a supportive environment, it is extremely helpful. 
           I am very grateful to those people who put their trust in me. </p>
         </div>
-        <img src="../images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
+        <img src="../images/" alt="Audrey Gelfand" class="imageright">
       </div>
     </div>
 
