--- a/HTML/Resources.html
+++ b/HTML/Resources.html
@@ -37,11 +37,11 @@
 
     <center><h1>Resources</h1></center>
 
-    <p class="paragraph">There is a vast array of literature available for those seeking to improve their mental health or understand an illness.
+    <center><p class="paragraph">There is a vast array of literature available for those seeking to improve their mental health or understand an illness.
       These are only a few of those resources, but they are ones my clients find very helpful.
       I do not have any relationship with these organizations or authors, they are simply resources that have proven to be valuable.
       If you have a resource that you think I should add to this list, please let me know.
-    </p>
+    </p></center>
 
     <br>
     <br>
