media for other pages mediaCE is done 8/4/23

--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="../css/contact.css">
-        <link rel="stylesheet" href="../css/media.css">
+        <link rel="stylesheet" href="../css/mediaCI.css">
         <title>Contact Us</title>
     </head>
     <body>
