--- a/HTML/Client_Experiences.html
+++ b/HTML/Client_Experiences.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="../css/client.css">
-        <link rel="stylesheet" href="../css/media.css">
+        <link rel="stylesheet" href="../css/mediaCE.css">
         <title>Contact Us</title>
     </head>
     <body>
