trying to figure out form submission via email. need to test and fix errors

--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -54,7 +54,7 @@
 
 
         <div class="contact-form-container">
-            <form class="contact-form">
+            <form class="contact-form" action="PHP/server-script.php" method="post">
                 <input type="text" id="name" placeholder="First Name" name="name" required>
 
                 <input type="text" id="last-name" placeholder="Last Name" name="last-name" required>
@@ -66,6 +66,7 @@
                 <button type="submit">Submit</button>
             </form>
         </div>
+        <script src="js/formSubmission.js"></script>
         
 
 
