scrapped php and js and will start from scratch

--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -54,7 +54,7 @@
 
 
         <div class="contact-form-container">
-            <form class="contact-form" action="PHP/server-script.php" method="post">
+            <form class="contact-form" action="PHP/server-script.php" method="post"> <!-- point to PHP script -->
                 <input type="text" id="name" placeholder="First Name" name="name" required>
 
                 <input type="text" id="last-name" placeholder="Last Name" name="last-name" required>
@@ -66,8 +66,8 @@
                 <button type="submit">Submit</button>
             </form>
         </div>
-        <script src="js/formSubmission.js"></script>
-        
+        <script src="js/formSubmission.js"></script> 
+        <!-- point to js script -->
 
 
 
