--- a/Home_Page.html
+++ b/Home_Page.html
@@ -34,13 +34,13 @@
 
     <div class="slideshow-container">
       <div class="Slides fade">
-        <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 400px">
+        <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 450px">
       </div>
       <div class="Slides fade">
-        <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 400px">
+        <img src="images/office.png" style="width: 100%; height: 400px">
       </div>
       <div class="Slides fade">
-        <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 400px">
+        <img src="images/Audrey Pictures/AG PHD.jpg" style="width: 100%; height: 450px">
       </div>
     </div>
     <br>  
@@ -66,7 +66,7 @@
             <button type="button" class="button1" onclick="redirectToAboutMe()">About Dr. Gelfand</button>
           </p>
         </div>
-        <img src="images/location.jpg" alt="Audrey Gelfand" class="imageright">
+        <img src="images/Protrate.jpg" alt="Audrey Gelfand" class="imageright">
       </div>
 
       <div class="block2">
@@ -128,7 +128,7 @@
             <button type="button" class="button2" onclick="redirectToResources()"> Helpful Resources </button>
           </p>
         </div>
-        <img src="images/location.png" alt="Audrey Gelfand" class="imageleft">
+        <img src="images/office.png" alt="Audrey Gelfand" class="imageleft">
       </div>
     </div>
 
@@ -157,7 +157,7 @@
         <div class="footer-info footer-3">
            <a href="#">Accessibility</a>
            <p style="text-decoration: none;">© 2023 Audrey Gelfand PH.D.</p>
-         </div>
+        </div>
       </div>
     </div>
 
